--- a/results/index.html
+++ b/results/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="../styles/reset.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/home.css">
     <title>Document</title>
 </head>
 
@@ -20,9 +20,15 @@
     </header>
     <main>
         <section class="poke-buttons">
-            <div id="pokemon">
-
-            </div>
+            <table>
+                <tr>
+                    <th>Pokemon</th>
+                    <th>Times Encountered</th>
+                    <th>Times Caught!</th>
+                </tr>
+            </table>
+            <button id="p-button">Place Order</button>
+            <button id="home">Back To Home</button>
         </section>
     </main>
     <footer>
