--- a/results/index.html
+++ b/results/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
+            <img src="../assets/big-logo.png" />
         </div>
     </header>
     <main>
@@ -23,12 +23,13 @@
             <table>
                 <tr>
                     <th>Pokemon</th>
+                    <th>ID</th>
                     <th>Times Encountered</th>
-                    <th>Times Caught!</th>
+                    <th>Times Caught</th>
                 </tr>
             </table>
-            <button id="p-button">Place Order</button>
-            <button id="home">Back To Home</button>
+            <!-- <button id="p-button">Place Order</button>
+            <button id="home">Back To Home</button> -->
         </section>
     </main>
     <footer>
