made first two charts, working

--- a/results/index.html
+++ b/results/index.html
@@ -21,7 +21,8 @@
         </div>
     </header>
     <main>
-        <canvas id="myChart"></canvas>
+        <canvas id="myChart" height="450" width="600"></canvas>
+        <canvas id="myChart2" height="450" width="600"></canvas>
         <section class="poke-buttons">
             <!-- <table>
                 <tr>
