added clear button, working

--- a/results/index.html
+++ b/results/index.html
@@ -24,17 +24,7 @@
         <canvas id="myChart" height="450" width="600"></canvas>
         <canvas id="myChart2" height="450" width="600"></canvas>
         <section class="poke-buttons">
-            <!-- <table>
-                <tr>
-                    <th>Pokemon</th>
-                    <th>ID</th>
-                    <th>Times Encountered</th>
-                    <th>Times Caught</th>
-                </tr>
-            </table> -->
-
-            <!-- <button id="p-button">Place Order</button>
-            <button id="home">Back To Home</button> -->
+            <button id="play-again">Play Again!</button>
         </section>
     </main>
     <footer>
