added 4 more charts

--- a/results/index.html
+++ b/results/index.html
@@ -23,6 +23,10 @@
     <main>
         <canvas id="myChart" height="450" width="600"></canvas>
         <canvas id="myChart2" height="450" width="600"></canvas>
+        <canvas id="myChart3" height="450" width="600"></canvas>
+        <canvas id="myChart4" height="450" width="600"></canvas>
+        <canvas id="myChart5" height="450" width="600"></canvas>
+        <canvas id="myChart6" height="450" width="600"></canvas>
         <section class="poke-buttons">
             <button id="play-again">Play Again!</button>
         </section>
