added allTime array and display is working

--- a/allresults/index.html
+++ b/allresults/index.html
@@ -29,14 +29,14 @@
         <canvas id="myChart6" height="450" width="600"></canvas>
         <section class="poke-buttons">
             <button id="play-again">Play Again!</button>
-            <button id="all-time-results">See All Time Results</button>
+            <button id="single-results">Back To Your Results</button>
         </section>
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
     </footer>
 
-    <script type="module" src="./results.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 
 </html>
