moved buttons to header in last page

--- a/allresults/index.html
+++ b/allresults/index.html
@@ -17,7 +17,9 @@
 <body>
     <header>
         <div class="gutter-right logo">
-            <img src="../assets/big-logo.png" />
+            <!-- <img src="../assets/big-logo.png" /> -->
+            <button id="play-again">Play Again!</button>
+            <button id="single-results">Back To Your Results</button>
         </div>
     </header>
     <main>
@@ -28,8 +30,7 @@
         <canvas id="myChart5" height="450" width="600"></canvas>
         <canvas id="myChart6" height="450" width="600"></canvas>
         <section class="poke-buttons">
-            <button id="play-again">Play Again!</button>
-            <button id="single-results">Back To Your Results</button>
+
         </section>
     </main>
     <footer>
